* Bug #33443: UMC Module: Reconnect after reboot
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47029 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.38-9) unstable; urgency=low
+
+  * Bug #33443: UMC Module: Reconnect after reboot
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 10 Jan 2014 11:16:35 +0100
+
 univention-updater (9.0.38-8) unstable; urgency=low
 
   * Bug #33610: Revert changes
