* Bug #33443: Allow usage of new Updater module methods
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47032 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/univention-demo-configuration/debian/changelog
+++ b/test/univention-demo-configuration/debian/changelog
@@ -1,3 +1,9 @@
+univention-demo-configuration (2.0.2-10) unstable; urgency=low
+
+  * Bug #33443: Allow usage of new Updater module methods
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 10 Jan 2014 11:26:24 +0100
+
 univention-demo-configuration (2.0.2-9) unstable; urgency=low
 
   * Bug #33793: Allow usage of new Join module methods
