--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,12 +1,18 @@
+univention-samba (8.0.15-5) unstable; urgency=low
+
+  * removed nofile limit stuff from package (Bug #32415) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 10 Jan 2014 11:39:40 +0100
+
 univention-samba (8.0.15-4) unstable; urgency=low
 
-  * increase max number of open files for smbd Bug #32415 
+  * increase max number of open files for smbd (Bug #32415) 
 
  -- Felix Botner <botner@univention.de>  Wed, 08 Jan 2014 17:07:42 +0100
 
 univention-samba (8.0.15-3) unstable; urgency=low
 
-  * increase max number of open files for smbd Bug #33031 
+  * increase max number of open files for smbd (Bug #33031)
 
  -- Felix Botner <botner@univention.de>  Wed, 08 Jan 2014 16:52:10 +0100
 
