fixed template (Bug #32415)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47037 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-9) unstable; urgency=low
+
+  * fixed template (Bug #32415) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 10 Jan 2014 11:59:45 +0100
+
 univention-pam (7.0.4-8) unstable; urgency=low
 
   * increase default nofile limit to 8192 (Bug #32415)
