* Bug #33329: Support properties that allow an empty value, but the frontend chooses the first non-empty one as default for new objects
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47043 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.97-14) unstable; urgency=low
+
+  * Bug #33329: Support properties that allow an empty value, but the frontend
+    chooses the first non-empty one as default for new objects
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 10 Jan 2014 15:11:37 +0100
+
 univention-management-console-module-udm (4.0.97-13) unstable; urgency=low
 
   * Bug #33004: Fixed links when having multiple UCR policies active at the
