* Disable 10_ldap/61getent_crash due to Bug #33904 (Bug #33050) * Added replication tags for the replication test cases
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47052 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-23) unstable; urgency=low
+
+  * Disable 10_ldap/61getent_crash due to Bug #33904 (Bug #33050)
+  * Added replication tags for the replication test cases
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 13 Jan 2014 07:13:43 +0100
+
 ucs-test (4.0.161-22) unstable; urgency=low
 
   * Bug #33757: 20_appcenter/17app_status typo fixed
