* Bug #33673: let module process stop when initialization fails, don't import modules from management.console.wizards anymore
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47061 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console (6.0.24-1) unstable; urgency=low
+
+  * Bug #33673: let module process stop when initialization fails, don't
+  	import modules from management.console.wizards anymore
+
+ -- Florian Best <best@univention.de>  Mon, 13 Jan 2014 11:26:42 +0100
+
 univention-management-console (6.0.23-1) unstable; urgency=low
 
   * Bug #33673: improve error handling when initializing of a module failed.
