* Bug #33118: fix typos * update copyright
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47079 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-ucr/debian/changelog
+++ b/management/univention-management-console-module-ucr/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-ucr (3.0.3-2) unstable; urgency=low
+
+  * Bug #33118: fix typos
+  * update copyright
+
+ -- Florian Best <best@univention.de>  Mon, 13 Jan 2014 11:34:15 +0100
+
 univention-management-console-module-ucr (3.0.3-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
