--- a/management/univention-management-console-module-ucr/umc/js/de.po
+++ b/management/univention-management-console-module-ucr/umc/js/de.po
@@ -123,7 +123,7 @@ msgid ""
 "The Univention Configuration Registry (UCR) is the local database for the configuration "
 "of UCS systems to access and edit system-wide properties in a unified manner. "
 "Caution: Changing UCR variables directly results in the change of the system "
-"configuration. Misconfiguration may cause an usable system!"
+"configuration. Misconfiguration may cause an unusable system!"
 msgstr ""
 "Univention Configuration Registry (UCR) ist die lokale Datenbank zur Konfiguration "
 "von UCS-Systemen. Mit diesem Modul lassen sich UCR-Variablen anlegen, "
