--- a/management/univention-management-console-module-ucr/umc/python/ucr/de.po
+++ b/management/univention-management-console-module-ucr/umc/python/ucr/de.po
@@ -6,33 +6,35 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-ucr\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-10-29 14:56+0200\n"
+"Report-Msgid-Bugs-To: packages@univention.de\n"
+"POT-Creation-Date: 2014-01-13 11:38+0100\n"
 "PO-Revision-Date: 2011-10-29 15:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 
-#: __init__.py:104
-#, python-format
-msgid "The UCR variable %s is read-only and can not be changed!"
-msgstr "Die UCR-Variable %s is nur lesbar und kann nicht geändert werden!"
-
-#: __init__.py:115
+#: umc/python/ucr/__init__.py:115
 msgid ""
 "Invalid UCR variable entry, the properties \"key\" and \"value\" need to "
 "specified."
-msgstr "Ungültiger UCR-Variableneintrag. Die Optionen \"key\" und \"value\" müssen angeeben werden"
+msgstr ""
+"Ungültiger UCR-Variableneintrag. Die Optionen \"key\" und \"value\" müssen "
+"angeeben werden"
 
-#: __init__.py:126
-#, python-format
-msgid "The UCR variable %s is read-only and can not be removed!"
-msgstr "Die UCR-variable %s ist nur lesbar und kann nicht entfernt werden"
-
-#: __init__.py:154
+#: umc/python/ucr/__init__.py:155
 #, python-format
 msgid "The UCR variable %(key)s could not be found"
 msgstr "Die UCR-Variable %(key)s konnte nicht gefunden werden"
+
+#: umc/python/ucr/__init__.py:104
+#, python-format
+msgid "The UCR variable %s is read-only and can not be changed!"
+msgstr "Die UCR-Variable %s ist nur lesbar und kann nicht geändert werden!"
+
+#: umc/python/ucr/__init__.py:127
+#, python-format
+msgid "The UCR variable %s is read-only and can not be removed!"
+msgstr "Die UCR-variable %s ist nur lesbar und kann nicht entfernt werden"
