* Bug #33493: add branding scope to translations * Bug #33673: adapt umcp status code definitions * update copyrights
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47086 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-frontend (3.0.152-8) unstable; urgency=low
+
+  * Bug #33493: add branding scope to translations
+  * Bug #33673: adapt umcp status code definitions
+  * update copyrights
+
+ -- Florian Best <best@univention.de>  Mon, 13 Jan 2014 11:52:18 +0100
+
 univention-management-console-frontend (3.0.152-7) unstable; urgency=low
 
   * Bug #33383: add setInitialValue method to the ComplexInput widget
