* During join call sysvol-sync with --overwrite-local except on primary DC   (Bug #33881)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47096 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-15) unstable; urgency=medium
+
+  * During join call sysvol-sync with --overwrite-local except on primary DC
+    (Bug #33881)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 13 Jan 2014 18:19:58 +0100
+
 univention-samba4 (3.0.39-14) unstable; urgency=medium
 
   * call sysvol-sync with --overwrite-local after provision of
