* Turn group-name-mapping into well-known-sid-name-mapping (Bug #33897)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47098 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-10) unstable; urgency=medium
+
+  * Turn group-name-mapping into well-known-sid-name-mapping (Bug #33897)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 13 Jan 2014 20:00:10 +0100
+
 univention-pam (7.0.4-9) unstable; urgency=low
 
   * fixed template (Bug #32415) 
