--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-11) unstable; urgency=medium
+
+  * Use samba specific objectclasses to determine object type (Bug #33897)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 11:10:51 +0100
+
 univention-pam (7.0.4-10) unstable; urgency=medium
 
   * Turn group-name-mapping into well-known-sid-name-mapping (Bug #33897)
