* Fix variable naming issue, improve code readability (Bug #33897)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47113 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-13) unstable; urgency=medium
+
+  * Fix variable naming issue, improve code readability (Bug #33897)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 12:44:52 +0100
+
 univention-pam (7.0.4-11) unstable; urgency=medium
 
   * Use samba specific objectclasses to determine object type (Bug #33897)
