--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,10 @@
+univention-pam (7.0.4-14) unstable; urgency=medium
+
+  * Take care to handle modrdn correctly in well-known-sid-name-mapping
+  * postrun restart slapd if name mappings have been changed (Bug #33897)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 16:22:26 +0100
+
 univention-pam (7.0.4-13) unstable; urgency=medium
 
   * Fix variable naming issue, improve code readability (Bug #33897)
