* Make the default name of the Administrator account configurable * use custom_groupname and custom_username from univention-lib   (Bug #33890)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47125 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,11 @@
+univention-ldap (10.0.17-12) unstable; urgency=medium
+
+  * Make the default name of the Administrator account configurable
+  * use custom_groupname and custom_username from univention-lib
+    (Bug #33890)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 16:38:19 +0100
+
 univention-ldap (10.0.17-11) unstable; urgency=low
 
   * Bug #33704: Change UCR policy attribute encoding from ASCII to UTF-8
