--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-13) unstable; urgency=medium
+
+  * Add well-known-sid-name-mapping.d/univention-ldap-server.sh (Bug #33890)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 16:40:48 +0100
+
 univention-ldap (10.0.17-12) unstable; urgency=medium
 
   * Make the default name of the Administrator account configurable
