--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-15) unstable; urgency=medium
+
+  * Only call run-parts if the directory exists (Bug #33897)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 16:55:42 +0100
+
 univention-pam (7.0.4-14) unstable; urgency=medium
 
   * Take care to handle modrdn correctly in well-known-sid-name-mapping
