--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-17) unstable; urgency=medium
+
+  * consider user name localization in templates (Bug #33650)  
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 18:18:41 +0100
+
 univention-pam (7.0.4-16) unstable; urgency=medium
 
   * Improve logging of run-parts in postrun (Bug #33897)
