--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-18) unstable; urgency=medium
+
+  * Register users/default/.* with /etc/security/.* templates (Bug #33650)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 19:15:11 +0100
+
 univention-pam (7.0.4-17) unstable; urgency=medium
 
   * consider user name localization in templates (Bug #33650)  
