* Register users/default/.* with /etc/security/.* templates (Bug #33646)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47143 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.5-6) unstable; urgency=medium
+
+  * Register users/default/.* with /etc/security/.* templates (Bug #33646)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 14 Jan 2014 19:16:07 +0100
+
 univention-nagios (7.0.5-5) unstable; urgency=medium
 
   * added user name localization (Bug #33646)
