Bug #20481: Fix race condition in Xen hotplug script
Due to some timing problems, the device might still be in the
initializing state. Delay for 1 second and retry again instead of
aborting the domain start.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47146 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/xen-4.1/debian/changelog
+++ b/virtualization/xen-4.1/debian/changelog
@@ -5,9 +5,10 @@ xen-4.1 (4.1.3-14) unstable; urgency=low
     - Lock order reversal between page_alloc_lock and mm_rwlock (CVE-2013-4553)
     - Information leaks through I/O instruction emulation (CVE-2013-4355)
     - Information leak through fbld instruction emulation (CVE-2013-4361)
-    - Lock order reversal between page allocation and grant table locks (CVE-2013-4494)	
+    - Lock order reversal between page allocation and grant table locks (CVE-2013-4494)
+  * Fix race condition in Xen hotplug script (Bug #20481)
 
- -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Tue, 14 Jan 2014 10:53:19 +0100
+ -- Philipp Hahn <hahn@univention.de>  Tue, 14 Jan 2014 10:32:56 +0100
 
 xen-4.1 (4.1.3-13) unstable; urgency=low
 
