--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.5-5) unstable; urgency=medium
+
+  * move userNameMapping and groupNameMapping to univention-lib (Bug #33889)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 15 Jan 2014 12:27:37 +0100
+
 univention-config-registry (9.0.5-4) unstable; urgency=medium
 
   * added userNameMapping() (Bug #33889)
