--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-16) UNRELEASED; urgency=medium
+
+  * Merge userNameMapping and groupNameMapping functions into
+    custom_username and custom_groupname (Bug #33893)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 15 Jan 2014 12:27:54 +0100
+
 univention-lib (3.0.26-15) unstable; urgency=medium
 
   * minor shell code polishing (Bug #33582)
@@ -6,7 +13,7 @@ univention-lib (3.0.26-15) unstable; urgency=medium
 
 univention-lib (3.0.26-14) unstable; urgency=medium
 
-  * Add custom_username function to shell and python lib (Bug #33644)
+  * Add custom_username function to shell and python lib (Bug #33893)
 
  -- Arvid Requate <requate@univention.de>  Thu, 09 Jan 2014 18:25:19 +0100
 
