--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-19) unstable; urgency=medium
+
+  * user custom_username and custom_groupname (Bug #33650)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 15 Jan 2014 12:32:57 +0100
+
 univention-pam (7.0.4-18) unstable; urgency=medium
 
   * Register users/default/.* with /etc/security/.* templates (Bug #33650)
