* fix typo (Bug #33650)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47159 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,6 +1,6 @@
 univention-pam (7.0.4-19) unstable; urgency=medium
 
-  * user custom_username and custom_groupname (Bug #33650)
+  * use custom_username and custom_groupname (Bug #33650)
 
  -- Arvid Requate <requate@univention.de>  Wed, 15 Jan 2014 12:32:57 +0100
 
