--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,10 @@
+univention-pam (7.0.4-20) unstable; urgency=medium
+
+  * use security/limits/user/.*/ instead of security/limits/user/default/
+    (Bug #32415)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 15 Jan 2014 16:10:49 +0100
+
 univention-pam (7.0.4-19) unstable; urgency=medium
 
   * use custom_username and custom_groupname (Bug #33650)
