--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-21) unstable; urgency=medium
+
+  * use security/limits/user/.*/  also in postinst (Bug #32415)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 15 Jan 2014 16:14:59 +0100
+
 univention-pam (7.0.4-20) unstable; urgency=medium
 
   * use security/limits/user/.*/ instead of security/limits/user/default/
