--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.68-2) unstable; urgency=low
+
+  * Bug #32996: version bump;
+
+ -- Florian Best <best@univention.de>  Thu, 16 Jan 2014 11:47:17 +0100
+
 univention-system-setup (7.0.68-1) unstable; urgency=low
 
   * Fix duplicate network error (Bug #33258)
