* Bug #33258: fix tests;
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47178 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.69-1) unstable; urgency=low
+
+  * Bug #33258: fix tests;
+
+ -- Florian Best <best@univention.de>  Thu, 16 Jan 2014 12:00:33 +0100
+
 univention-system-setup (7.0.68-2) unstable; urgency=low
 
   * Bug #32996: version bump;
