Bug #33258: USS: Fix unit tests
Convert set() to list() in the unit tests.
Add unit test for duplicate addresses in same subnet.

Also fix a bug with installation of empty hook directories (Bug #33729)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47181 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-2) unstable; urgency=low
+
+  * Fix unit test for duplicate network error (Bug #33258)
+  * Fix installation of empty hook directories (Bug #33729)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 16 Jan 2014 11:52:58 +0100
+
 univention-system-setup (7.0.69-1) unstable; urgency=low
 
   * Bug #33258: fix tests;
