* mswmi.schema (Bug #33937) * Add msGPOWQLFilter to msgo.schema
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47185 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (10.0.17-15) unstable; urgency=medium
+
+  * mswmi.schema (Bug #33937)
+  * Add msGPOWQLFilter to msgo.schema
+
+ -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 14:26:56 +0100
+
 univention-ldap (10.0.17-14) unstable; urgency=medium
 
   * Add copyright header (Bug #33890)
