--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,7 +1,7 @@
 univention-ldap (10.0.17-15) unstable; urgency=medium
 
   * mswmi.schema (Bug #33937)
-  * Add msGPOWQLFilter to msgo.schema
+  * Add msGPOWQLFilter to msgpo.schema
 
  -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 14:26:56 +0100
 
