--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-16) unstable; urgency=medium
+
+  * succomb to the intricate logic of configRegistry.is_false (Bug #33936)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 14:49:52 +0100
+
 univention-s4-connector (8.0.33-15) unstable; urgency=medium
 
   * New UDM module container/mswmifilter (Bug #33936)
