--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-16) unstable; urgency=medium
+
+  * Inculde mswmi.schema by default (Bug #33937)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 16:02:03 +0100
+
 univention-ldap (10.0.17-15) unstable; urgency=medium
 
   * mswmi.schema (Bug #33937)
