--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,8 +1,9 @@
 univention-ldap (10.0.17-16) unstable; urgency=medium
 
-  * Inculde mswmi.schema by default (Bug #33937)
+  * Inculde mswmi.schema by default
+  * Fix schema syntax (Bug #33937)
 
- -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 16:02:03 +0100
+ -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 16:09:25 +0100
 
 univention-ldap (10.0.17-15) unstable; urgency=medium
 
