* Some LDAP mapping fixes for Bug #33936
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47199 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-s4-connector (8.0.33-17) unstable; urgency=medium
+
+  * Some LDAP mapping fixes for Bug #33936
+
+ -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 16:18:02 +0100
+
 univention-s4-connector (8.0.33-16) unstable; urgency=medium
 
   * succomb to the intricate logic of configRegistry.is_false (Bug #33936)
