* Bug #33554: fix typo * Bug #33651: invalidate cache when default container or container changes * update copyright
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47208 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-udm (4.0.97-16) unstable; urgency=low
+
+  * Bug #33554: fix typo
+  * Bug #33651: invalidate cache when default container or container changes
+  * update copyright
+
+ -- Florian Best <best@univention.de>  Mon, 13 Jan 2014 11:36:03 +0100
+
 univention-management-console-module-udm (4.0.97-15) unstable; urgency=low
 
   * Bug #33329: default beats nonempty_is_default; allow overwriting of
