--- a/management/univention-management-console-module-udm/umc/de.po
+++ b/management/univention-management-console-module-udm/umc/de.po
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 msgid "Browsing and managing the LDAP tree"
-msgstr "Durchsuchen und Verwalten des LDAP-Verzeichisbaums"
+msgstr "Durchsuchen und Verwalten des LDAP-Verzeichnisbaums"
 
 msgid "Change Password"
 msgstr "Passwort ändern"
