--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.30-5) unstable; urgency=low
+
+  * Enforce UTF-8 encoding when setting locale (Bug #33916)
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 17 Jan 2014 14:32:24 +0100
+
 univention-installer (9.0.30-4) unstable; urgency=low
 
   * Bug #28191: added special chainloading target for UEFI
