* Bug #33407: fix overwriting of IP addresses when opening an interface again
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47258 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-4) unstable; urgency=low
+
+  * Bug #33407: fix overwriting of IP addresses when opening an interface
+  	again
+
+ -- Florian Best <best@univention.de>  Mon, 20 Jan 2014 15:38:16 +0100
+
 univention-system-setup (7.0.69-3) unstable; urgency=low
 
   * Fix unit test for duplicate network error (Bug #33258)
