--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,11 @@
+univention-virtual-machine-manager-daemon (3.0.17-2) unstable; urgency=low
+
+  * Act on libvirt events to write VNC token file directly after starting
+    a virtual machine. A VNC connection initiated from the Univention 
+    Directory Manager module can now be used immediately (Bug #33166)
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 20 Jan 2014 16:47:00 +0100
+
 univention-virtual-machine-manager-daemon (3.0.17-1) unstable; urgency=low
 
   * Fix change detection for noVNC (Bug #30540)
