--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (9.0.28-1) unstable; urgency=medium
+
+  * Add mswmi.schema (Bug #33937)
+  * Add msGPOWQLFilter to msgpo.schema
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Jan 2014 18:14:52 +0100
+
 univention-ldap (9.0.27-5) unstable; urgency=low
 
   * Wait for named and exit on failure (Bug #29462)
