--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (9.0.29-1) unstable; urgency=medium
+
+  * Bump version (Bug #33937)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 20 Jan 2014 18:18:58 +0100
+
 univention-ldap (9.0.28-1) unstable; urgency=medium
 
   * Add mswmi.schema (Bug #33937)
