* Remove mswmi.schema (Bug #33936)   * Refer to Bug #33961 for msGPOWQLFilter
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47281 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,14 +1,20 @@
+univention-ldap (10.0.17-17) UNRELEASED; urgency=medium
+
+  * Remove mswmi.schema (Bug #33936)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 11:53:05 +0100
+
 univention-ldap (10.0.17-16) unstable; urgency=medium
 
   * Inculde mswmi.schema by default
-  * Fix schema syntax (Bug #33937)
+  * Fix schema syntax (Bug #33936)
 
  -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 16:09:25 +0100
 
 univention-ldap (10.0.17-15) unstable; urgency=medium
 
-  * mswmi.schema (Bug #33937)
-  * Add msGPOWQLFilter to msgpo.schema
+  * mswmi.schema (33936 #33937)
+  * Add msGPOWQLFilter to msgpo.schema (Bug #33961)
 
  -- Arvid Requate <requate@univention.de>  Thu, 16 Jan 2014 14:26:56 +0100
 
