--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.50-17) unstable; urgency=low
+
+  * Bug #33958: Add Support URLs for apps
+  * Bug #31344: Rename app detail "Website" to "More information"
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 21 Jan 2014 12:01:00 +0100
+
 univention-management-console-module-appcenter (3.0.50-16) unstable; urgency=low
 
   * Bug #33573: Identify unpacked packages as installed when reporting
