--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,4 +1,11 @@
-univention-ldap (10.0.17-17) UNRELEASED; urgency=medium
+univention-ldap (10.0.17-18) unstable; urgency=medium
+
+  * Make local schema inclusion code detect includes made by template
+    subfiles (Bug #33962)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 12:47:51 +0100
+
+univention-ldap (10.0.17-17) unstable; urgency=medium
 
   * Remove mswmi.schema (Bug #33936)
 
