--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.75-13) unstable; urgency=low
+
+  * Bug #33703: Fixed setting and displaying of users' sambaLogonHours
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 21 Jan 2014 12:59:55 +0100
+
 univention-directory-manager-modules (9.0.75-12) unstable; urgency=low
 
   * The 'inherit ACL' option for samba shares can be set again
