--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-10) unstable; urgency=low
+
+  * Bug #33703: Fixed MultiSelect widget setting its values too early
+    breaking page rendering
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 21 Jan 2014 13:01:27 +0100
+
 univention-management-console-frontend (3.0.152-9) unstable; urgency=low
 
   * Bug #33798: Reverse traceback when sending it via mail because web or mail
