--- a/virtualization/univention-novnc/debian/changelog
+++ b/virtualization/univention-novnc/debian/changelog
@@ -1,3 +1,9 @@
+univention-novnc (0.4+0+20131014+git142aa45-2) ucs-3.2; urgency=low
+
+  * Test for secured websocket port (Bug #33587)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 21 Jan 2014 12:30:21 +0100
+
 univention-novnc (0.4+0+20131014+git142aa45-1) ucs-3.2; urgency=low
 
   * Replace Java based VNC applet by noVNC (Bug #30540)
