--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-19) unstable; urgency=medium
+
+  * Restore accidently removed msgpo.schema (Bug #33936)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 13:23:41 +0100
+
 univention-ldap (10.0.17-18) unstable; urgency=medium
 
   * Make local schema inclusion code detect includes made by template
