--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-18) unstable; urgency=medium
+
+  * Ship msgpo.schema and mswmi.schema (Bug #33936)
+  * Use ucs_registerLDAPExtension for schema extensions and udm modules
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 15:12:28 +0100
+
 univention-s4-connector (8.0.33-17) unstable; urgency=medium
 
   * Some LDAP mapping fixes for Bug #33936
