--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.5-8) unstable; urgency=medium
+
+  * Fix access-nagios.conf (Bug #33646)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 16:07:34 +0100
+
 univention-nagios (7.0.5-7) unstable; urgency=medium
 
   * use custom_username and custom_groupname (Bug #33646)
