--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,9 @@
+univention-pam (7.0.4-22) unstable; urgency=medium
+
+  * Remove stray line in access-kde.conf (Bug #33650)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 16:09:21 +0100
+
 univention-pam (7.0.4-21) unstable; urgency=medium
 
   * use security/limits/user/.*/  also in postinst (Bug #32415)
