--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-20) unstable; urgency=medium
+
+  * Register UCR users/default/.* (Bug #33890)
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 16:26:10 +0100
+
 univention-ldap (10.0.17-19) unstable; urgency=medium
 
   * Restore accidently removed msgpo.schema (Bug #33936)
