--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-s4-connector (8.0.33-19) unstable; urgency=medium
+
+  * Move package update operations for mswmi to join script,
+    required for those UCS@school domains where the S4 Connector is only
+    installed on the UCS DC Slaves (Bug #33936).
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 18:16:17 +0100
+
 univention-s4-connector (8.0.33-18) unstable; urgency=medium
 
   * Ship msgpo.schema and mswmi.schema (Bug #33936)
