--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,11 @@
+univention-s4-connector (7.0.33-2) unstable; urgency=medium
+
+  * Move package update operations for mswmi to join script,
+    required for those UCS@school domains where the S4 Connector is only
+    installed on the UCS DC Slaves (Bug #33956).
+
+ -- Arvid Requate <requate@univention.de>  Tue, 21 Jan 2014 18:47:10 +0100
+
 univention-s4-connector (7.0.33-1) unstable; urgency=medium
 
   * New UDM module container/mswmifilter (Bug #33956)
