--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-24) unstable; urgency=low
+
+  * 00_base/9*rename_*: Added test cases for the rename of
+    default accounts (Bug #33897)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 22 Jan 2014 08:22:00 +0100
+
 ucs-test (4.0.161-23) unstable; urgency=low
 
   * Disable 10_ldap/61getent_crash due to Bug #33904 (Bug #33050)
