--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-25) unstable; urgency=low
+
+  * 00_base/96rename_domain_admins: ignore some
+    /etc/security/access*.conf files (Bug #33650)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 22 Jan 2014 08:36:17 +0100
+
 ucs-test (4.0.161-24) unstable; urgency=low
 
   * 00_base/9*rename_*: Added test cases for the rename of
