--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.17-3) unstable; urgency=low
+
+  * Fix check-script to restart UVMMd instead of libvird (Bug #33741)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 22 Jan 2014 10:00:50 +0100
+
 univention-virtual-machine-manager-daemon (3.0.17-2) unstable; urgency=low
 
   * Act on libvirt events to write VNC token file directly after starting
