* Bug #33798: Put UCS version on top of traceback mail
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47342 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-11) unstable; urgency=low
+
+  * Bug #33798: Put UCS version on top of traceback mail
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 22 Jan 2014 10:55:13 +0100
+
 univention-management-console-frontend (3.0.152-10) unstable; urgency=low
 
   * Bug #33703: Fixed MultiSelect widget setting its values too early
