--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,10 @@
+univention-pam (7.0.4-23) unstable; urgency=medium
+
+  * use security/limits/default/user/ instead of security/limits/user/.*/
+    (Bug #32415)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 22 Jan 2014 15:11:46 +0100
+
 univention-pam (7.0.4-22) unstable; urgency=medium
 
   * Remove stray line in access-kde.conf (Bug #33650)
