* Communicate changes to the well-known-sid-name-mapping.d hooks * turn the hooks into python modules (Bug #33897)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47353 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/changelog
+++ b/base/univention-pam/debian/changelog
@@ -1,3 +1,10 @@
+univention-pam (7.0.4-24) unstable; urgency=medium
+
+  * Communicate changes to the well-known-sid-name-mapping.d hooks
+  * turn the hooks into python modules (Bug #33897)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 22 Jan 2014 15:47:25 +0100
+
 univention-pam (7.0.4-23) unstable; urgency=medium
 
   * use security/limits/default/user/ instead of security/limits/user/.*/
