--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-21) unstable; urgency=medium
+
+  * Turn well-known-sid-name-mapping.d hook into python code (Bug #33890)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 22 Jan 2014 15:49:09 +0100
+
 univention-ldap (10.0.17-20) unstable; urgency=medium
 
   * Register UCR users/default/.* (Bug #33890)
