* Bug #33383: fix interface of ComplexInput.setInitialValue
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47356 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-12) unstable; urgency=low
+
+  * Bug #33383: fix interface of ComplexInput.setInitialValue
+
+ -- Florian Best <best@univention.de>  Wed, 22 Jan 2014 16:05:25 +0100
+
 univention-management-console-frontend (3.0.152-11) unstable; urgency=low
 
   * Bug #33798: Put UCS version on top of traceback mail
