--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-22) unstable; urgency=medium
+
+  * remove shebang from python script (Bug #33890)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 22 Jan 2014 16:06:33 +0100
+
 univention-ldap (10.0.17-21) unstable; urgency=medium
 
   * Turn well-known-sid-name-mapping.d hook into python code (Bug #33890)
