* Turn well-known-sid-name-mapping.d hook into python code (Bug #33890)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47359 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-23) unstable; urgency=medium
+
+  * Turn well-known-sid-name-mapping.d hook into python code (Bug #33890)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 22 Jan 2014 16:11:39 +0100
+
 univention-ldap (10.0.17-22) unstable; urgency=medium
 
   * remove shebang from python script (Bug #33890)
