* Fix handling of samba/global/options/.*  (Bug #28722)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47361 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba/debian/changelog
+++ b/services/univention-samba/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba (8.0.16-1) unstable; urgency=medium
+
+  * Fix handling of samba/global/options/.*  (Bug #28722)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 22 Jan 2014 19:57:57 +0100
+
 univention-samba (8.0.15-5) unstable; urgency=low
 
   * removed nofile limit stuff from package (Bug #32415) 
