--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,10 @@
+univention-system-setup (7.0.69-6) unstable; urgency=low
+
+  * Bug #33407: revert changes, don't set maximum IP address possibilities in
+  	the frontend
+
+ -- Florian Best <best@univention.de>  Thu, 23 Jan 2014 12:19:14 +0100
+
 univention-system-setup (7.0.69-5) unstable; urgency=low
 
   * Bug #33976: german translation for "next" has been changed
