* Bug #32655: fix host dropdown design in Internet Explorer and Firefox
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47379 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-13) unstable; urgency=low
+
+  * Bug #32655: fix host dropdown design in Internet Explorer and Firefox
+
+ -- Florian Best <best@univention.de>  Thu, 23 Jan 2014 14:34:50 +0100
+
 univention-management-console-frontend (3.0.152-12) unstable; urgency=low
 
   * Bug #33383: fix interface of ComplexInput.setInitialValue
