* Create CN=WMIPolicy,CN=System referenced by UCS@school ACLs   (Bug #33936).
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47395 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-21) unstable; urgency=medium
+
+  * Create CN=WMIPolicy,CN=System referenced by UCS@school ACLs
+    (Bug #33936).
+
+ -- Arvid Requate <requate@univention.de>  Thu, 23 Jan 2014 17:11:59 +0100
+
 univention-s4-connector (8.0.33-20) unstable; urgency=medium
 
   * Reduce waiting time for ucs_registerLDAPExtension (Bug #33936).
