* bash fix (Bug #33582)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47399 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-17) unstable; urgency=medium
+
+  * bash fix (Bug #33582)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 23 Jan 2014 18:24:03 +0100
+
 univention-lib (3.0.26-16) UNRELEASED; urgency=medium
 
   * Merge userNameMapping and groupNameMapping functions into
