* Create CN=WMIPolicy,CN=System independent of joinscript version * fix scripts/msGPOWQLFilter.py (Bug #33936)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47400 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (8.0.33-22) unstable; urgency=medium
+
+  * Create CN=WMIPolicy,CN=System independent of joinscript version
+  * fix scripts/msGPOWQLFilter.py (Bug #33936)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 23 Jan 2014 19:06:10 +0100
+
 univention-s4-connector (8.0.33-21) unstable; urgency=medium
 
   * Create CN=WMIPolicy,CN=System referenced by UCS@school ACLs
