* Create CN=WMIPolicy,CN=System referenced by UCS@school ACLs * fix scripts/msGPOWQLFilter.py (Bug #33956)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@47401 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -1,3 +1,10 @@
+univention-s4-connector (7.0.33-3) unstable; urgency=medium
+
+  * Create CN=WMIPolicy,CN=System referenced by UCS@school ACLs
+  * fix scripts/msGPOWQLFilter.py (Bug #33956)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 23 Jan 2014 19:15:44 +0100
+
 univention-s4-connector (7.0.33-2) unstable; urgency=medium
 
   * Move package update operations for mswmi to join script,
